# fff.nvim

./: Cargo.toml  README.md
crates/fff-core/: Cargo.toml
crates/fff-core/src/: bigram_filter.rs  case_insensitive_memmem.rs  file_picker.rs  grep.rs  score.rs
crates/fff-core/tests/: bigram_overlay_coherence_test.rs
crates/fff-grep/: Cargo.toml
crates/fff-grep/src/: lines.rs
crates/fff-nvim/: Cargo.toml
doc/: fff.nvim.txt
lua/fff/: file_renderer.lua
