[package]
name = "fff-nvim"
version = "0.1.0"
edition = "2021"
description = "A fast file finder plugin for Neovim"
license = "MIT"
repository = "https://github.com/your-username/fff.nvim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fff"
crate-type = ["cdylib"]

[[bin]]
name = "fff"
path = "src/main.rs"

[dependencies]
# Fuzzy matching
nucleo = "0.5"
nucleo-matcher = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File system walking
ignore = "0.4"

# Serialization for communicating with Neovim
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Faster incremental builds during development
# bumped opt-level to 2 for slightly better perf while still keeping builds reasonably fast
[profile.dev]
opt-level = 2
