[package]
name = "fff-nvim"
version = "0.1.0"
edition = "2021"
description = "A fast file finder plugin for Neovim"
license = "MIT"
repository = "https://github.com/your-username/fff.nvim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fff"
crate-type = ["cdylib"]

[[bin]]
name = "fff"
path = "src/main.rs"

[dependencies]
# Fuzzy matching
nucleo = "0.5"
nucleo-matcher = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# File system walking
ignore = "0.4"

# Serialization for communicating with Neovim
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Dev profile: keeping opt-level at 0 for fastest possible incremental builds
# during active development; bump to 1 if you need slightly better perf in debug
[profile.dev]
opt-level = 0
# Enable debug info for better backtraces when debugging
debug = true
# Faster linking in dev builds (useful on Linux with mold or lld)
split-debuginfo = "unpacked"
# Speed up dev builds by skipping incremental compilation artifacts for deps
incremental = true
